build-storybook.log
yarn run v1.22.19
$ storybook build --output-dir /var/folders/3_/3y84r1fj36gdn05mq4c_z9s40000gp/T/chromatic--18403-aWryJki3pRPJ
@storybook/cli v7.6.16

info => Cleaning outputDir: /var/folders/3_/3y84r1fj36gdn05mq4c_z9s40000gp/T/chromatic--18403-aWryJki3pRPJ
info => Loading presets
info => Building manager..
info => Manager built (97 ms)
info => Building preview..
info => Copying static files: /Users/persoonlijk/learnstorybook-design-system/node_modules/@storybook/manager/static at /var/folders/3_/3y84r1fj36gdn05mq4c_z9s40000gp/T/chromatic--18403-aWryJki3pRPJ/sb-common-assets
vite v4.5.2 building for production...

./sb-common-assets/fonts.css doesn't exist at build time, it will remain unchanged to be resolved at runtime
transforming...
✓ 96 modules transformed.
✓ built in 1.51s
[storybook:react-docgen-plugin] /Users/persoonlijk/learnstorybook-design-system/src/Dialog/Dialog.jsx: Identifier 'Dialog' has already been declared. (4:13)

  2 | import Dialog from '@mui/material/Dialog';
  3 |
> 4 | export const Dialog = () => {
    |              ^
  5 |   return (
  6 |     <div>
  7 |       {/* Your dialog content here */}
file: /Users/persoonlijk/learnstorybook-design-system/src/Dialog/Dialog.jsx:4:13
=> Failed to build the preview
SyntaxError: ./src/Dialog/Dialog.jsx: Identifier 'Dialog' has already been declared. (4:13)

  2 | import Dialog from '@mui/material/Dialog';
  3 |
> 4 | export const Dialog = () => {
    |              ^
  5 |   return (
  6 |     <div>
  7 |       {/* Your dialog content here */}
    at constructor (./node_modules/@babel/parser/lib/index.js:353:19)
    at JSXParserMixin.raise (./node_modules/@babel/parser/lib/index.js:3277:19)
    at ScopeHandler.checkRedeclarationInScope (./node_modules/@babel/parser/lib/index.js:1491:19)
    at ScopeHandler.declareName (./node_modules/@babel/parser/lib/index.js:1457:12)
    at JSXParserMixin.declareNameFromIdentifier (./node_modules/@babel/parser/lib/index.js:7348:16)
    at JSXParserMixin.checkIdentifier (./node_modules/@babel/parser/lib/index.js:7344:12)
    at JSXParserMixin.checkLVal (./node_modules/@babel/parser/lib/index.js:7290:12)
    at JSXParserMixin.parseVarId (./node_modules/@babel/parser/lib/index.js:12873:10)
    at JSXParserMixin.parseVar (./node_modules/@babel/parser/lib/index.js:12853:12)
    at JSXParserMixin.parseVarStatement (./node_modules/@babel/parser/lib/index.js:12700:10)
    at JSXParserMixin.parseStatementContent (./node_modules/@babel/parser/lib/index.js:12312:23)
    at JSXParserMixin.parseStatementLike (./node_modules/@babel/parser/lib/index.js:12229:17)
    at JSXParserMixin.parseStatementListItem (./node_modules/@babel/parser/lib/index.js:12209:17)
    at JSXParserMixin.parseExportDeclaration (./node_modules/@babel/parser/lib/index.js:13386:17)
    at JSXParserMixin.maybeParseExportDeclaration (./node_modules/@babel/parser/lib/index.js:13345:31)
    at JSXParserMixin.parseExport (./node_modules/@babel/parser/lib/index.js:13272:29)
    at JSXParserMixin.parseStatementContent (./node_modules/@babel/parser/lib/index.js:12342:27)
    at JSXParserMixin.parseStatementLike (./node_modules/@babel/parser/lib/index.js:12229:17)
    at JSXParserMixin.parseModuleItem (./node_modules/@babel/parser/lib/index.js:12206:17)
    at JSXParserMixin.parseBlockOrModuleBlockBody (./node_modules/@babel/parser/lib/index.js:12786:36)
    at JSXParserMixin.parseBlockBody (./node_modules/@babel/parser/lib/index.js:12779:10)
    at JSXParserMixin.parseProgram (./node_modules/@babel/parser/lib/index.js:12106:10)
    at JSXParserMixin.parseTopLevel (./node_modules/@babel/parser/lib/index.js:12096:25)
    at JSXParserMixin.parse (./node_modules/@babel/parser/lib/index.js:13895:10)
    at parse (./node_modules/@babel/parser/lib/index.js:13916:26)
    at parser (./node_modules/@babel/core/lib/parser/index.js:41:34)
    at parser.next (<anonymous>)
    at parse (./node_modules/@babel/core/lib/parse.js:25:37)
    at parse.next (<anonymous>)
    at evaluateSync (./node_modules/gensync/index.js:251:28)
    at sync (./node_modules/gensync/index.js:89:14)
    at stopHiding - secret - don't use this - v1 (./node_modules/@babel/core/lib/errors/rewrite-stack-trace.js:47:12)
    at parseSync (./node_modules/@babel/core/lib/parse.js:40:72)
    at babelParser (./node_modules/react-docgen/dist/babelParser.js:78:41)
    at parse (./node_modules/react-docgen/dist/parse.js:51:46)
    at defaultParse (./node_modules/react-docgen/dist/main.js:55:35)
    at Object.transform (./node_modules/@storybook/react-vite/dist/preset.js:1:2727)
    at file://./node_modules/rollup/dist/es/shared/node-entry.js:25544:40
error Command failed with exit code 1.
info Visit https://yarnpkg.com/en/docs/cli/run for documentation about this command.
